--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
 // If you want to override variables do it here
 @import "variables";
-
+@import "fonts";
 // Import styles
 @import "~@coreui/coreui/scss/coreui";
 
