--- a/src/app/views/messages/messages.component.html
+++ b/src/app/views/messages/messages.component.html
@@ -1,3 +1,61 @@
-<p>
-  messages works!
-</p>
+<p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+
+<p-tabMenu [model]="items1" [activeItem]="items1[params.approved]"></p-tabMenu>
+
+
+
+<div class="row">
+  <div class="col-sm-12 col-lg-3">
+    <p-table [value]="data"  selectionMode="single"   (onRowSelect)="rowSelect($event)" [(selection)]="selectedCar3"  dataKey="id">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>ზედ. ნომერი</th>
+          <th>ოპერაციის ტიპი</th>
+          <th>
+            <div *ngIf="selectedParams.id !== 0 && params.approved === 0">
+              <button pButton type="button" icon="pi pi-check"  class="ui-button-success" (click)="confirm(2)"></button>
+              <button pButton type="button" icon="pi  pi-times"  class="ui-button-danger" (click)="confirm(1)"></button>
+            </div>
+            <span *ngIf="selectedParams.id === 0 || params.approved !== 0">თარიღი</span>
+          </th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-d>
+
+        <tr [pSelectableRow]="d">
+          <td>{{d['id']}}</td>
+          <td>{{d['operationType']}}</td>
+          <td>{{d['date']}}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <p-paginator [rows]="30" totalRecords="{{totalRecord}}" (onPageChange)="paginate($event)"></p-paginator>
+  </div>
+  <div class="col-sm-12 col-lg-9">
+    <p-table [value]="selectedData">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>დასახელება</th>
+          <th>მარკა</th>
+          <th>მოდელი</th>
+          <th>ფასი</th>
+          <th>რაოდენობა</th>
+          <th>შტრიხკოდი</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-dt>
+        <tr>
+          <td>{{dt['item']['name']}}</td>
+          <td>{{dt['item']['maker']['name']}}</td>
+          <td>{{dt['item']['model']['name']}}</td>
+          <td>{{dt['item']['price']}}</td>
+          <td>{{dt['addonAmount']}}</td>
+          <td>{{dt['item']['fullBarcode']}}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <p-paginator [rows]="30" totalRecords="{{selectedTotalRecord}}" (onPageChange)="selectedPaginate($event)"></p-paginator>
+  </div>
+</div>
+
+
