--- a/src/app/views/management/property/property.component.html
+++ b/src/app/views/management/property/property.component.html
@@ -6,14 +6,16 @@
   <button (click)="showDialog()" *ngIf="distributed" pButton type="button" label="ინვენტარის საწყობში დაბრუნება" class="ui-button-raised" style="position: absolute; right: 400px"></button> &nbsp;&nbsp;
   <button (click)="inventoryToBuildingDialog()" *ngIf="distributed" pButton type="button" label="ინვენტარის მოძრაობა შენობებს შორის" class="ui-button-raised"  style="position: absolute; right: 100px"></button>&nbsp;&nbsp;
   <button (click)="personDialog()" *ngIf="!distributed" pButton type="button" label="განპიროვნება" class="ui-button-raised"  style="position: absolute; right: 100px"></button>&nbsp;&nbsp;
-  <fa-icon [icon]="faCartPlus"  (click)="cartDialog()" size="2x"  style="position: absolute;right: 37px;margin-top: 3px;color: #007ad9;"></fa-icon>
-
+  <span style="position: absolute;right: 37px;margin-top: 3px;color: #007ad9;">
+    <fa-icon [icon]="faCartPlus"  (click)="cartDialog()" size="2x"  ></fa-icon>
+    {{this.cartItems.length}}
+  </span>
 </div>
 <br>
 <div class="row">
   <ag-grid-angular
     #agGrid
-    style="width: 100%; height: 800px;"
+    style="width: 100%;height: calc(100vh - 246px);"
     id="myGrid"
     class="ag-theme-balham"
     [columnDefs]="columnDefs"
@@ -33,260 +35,147 @@
     [rowData]="rowData"
     [pivotPanelShow]="true"
     (gridReady)="onGridReady($event)"
-    (cellDoubleClicked)="test($event)"
+    (cellClicked)="cart($event)"
   ></ag-grid-angular>
-
 </div>
+
 <p-dialog header="ინვენტარის საწყობში დაბრუნება" [(visible)]="display" [modal]="true" [responsive]="true" [style]="{width: '700px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
-  <div style="width: 100%;height: 500px;">
+  <div style="width: 100%;height: 500px;" *ngIf="inventorReturnModel.inventarReturnGenerator">
+    <app-generator [transferToSection]="inventorReturnModel" ></app-generator>
+  </div>
+  <div style="width: 100%;height: 500px;" *ngIf="!inventorReturnModel.inventarReturnGenerator">
     <div class="ui-g ui-fluid">
       <div class="ui-g-12 ui-md-4">
         <p>თარიღი</p>
-        <p-calendar [(ngModel)]="date" [showIcon]="true"></p-calendar>
+        <p-calendar [(ngModel)]="inventorReturnModel.date" [showIcon]="true" [ngClass]="{ 'red':if_error(formErrors,'date')?'1px solid red': '' }"></p-calendar>
       </div>
       <div class="ui-g-12 ui-md-4">
         <p>სექცია</p>
-        <p-dropdown [options]="sections" ></p-dropdown>
+        <p-dropdown [ngClass]="{ 'red':if_error(formErrors,'selectedSection')?'1px solid red': '' }" [options]="stockList" optionLabel="name" placeholder="აირჩიეთ სექცია" [(ngModel)]="inventorReturnModel.selectedSection"  (ngModelChange)="getTransferProperty()"  ></p-dropdown>
       </div>
       <div class="ui-g-12 ui-md-4">
         <p>ფროფერთი</p>
-        <p-dropdown [options]="properties" ></p-dropdown>
+        <p-dropdown   [ngClass]="{ 'red':if_error(formErrors,'selectedProperty')?'1px solid red': '' }" [options]="propertyData" optionLabel="fullname" placeholder="ფროფერთი" [(ngModel)]="inventorReturnModel.selectedProperty" ></p-dropdown>
       </div>
       <div class="ui-g-12 ui-md-12">
         <p>ტრანსპორტ. პასხ. პირი:</p>
-        <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                        [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-          <ng-template let-brand pTemplate="item">
-            <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-              <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-            </div>
-          </ng-template>
+        <p-autoComplete [ngClass]="{ 'red':if_error(formErrors,'selectedCarrier')?'1px solid red': '' }"  [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorReturnModel.selectedCarrier"
+                        [minLength]="1" placeholder=""  field="name" [dropdown]="true">
         </p-autoComplete>
       </div>
       <div class="ui-g-12 ui-md-12">
         <p>კომენტარი</p>
-        <textarea pInputTextarea placeholder="შენიშვნა"></textarea>
+        <textarea pInputTextarea placeholder="შენიშვნა" [(ngModel)]="inventorReturnModel.note"></textarea>
       </div>
-
-
-
-      <div class="ui-g-12 ui-md-12">
-        <button pButton type="button" label="კალათის გასუფთავება" class="ui-button-danger" iconPos="left" icon="pi pi-check" style="width: 200px"></button>
-        <hr>
-        <p-table >
-          <ng-template pTemplate="header">
-            <tr>
-              <th>დასახელება</th>
-              <th>შტრიხკოდი</th>
-              <th>რაოდენობა</th>
-              <th>რაოდენობა</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-car>
-            <tr>
-              <td>{{car.vin}}</td>
-              <td>{{car.year}}</td>
-              <td>{{car.brand}}</td>
-              <td>{{car.color}}</td>
-            </tr>
-          </ng-template>
-        </p-table>
-      </div>
+      <app-cart [data]="cartItemsData" (removeCartItem)="removeCartItem()" ></app-cart>
     </div>
   </div>
   <p-footer>
-    <button type="button" pButton icon="pi pi-check" (click)="display=false" label="ზედდებულის გენერაცია"></button>
+    <button type="button" pButton icon="pi pi-check"  *ngIf="!inventorReturnModel.inventarReturnGenerator"(click)="generateInventarReturn()" label="ზედდებულის გენერაცია"></button>
+    <button type="button" pButton icon="pi pi-check"  *ngIf="inventorReturnModel.inventarReturnGenerator" (click)="activateInventarReturn()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="display=false" label="დახურვა" class="ui-button-secondary"></button>
   </p-footer>
 </p-dialog>
 
-<p-dialog header=" " [(visible)]="cartDialogShow" [modal]="true" [responsive]="true" [style]="{width: '700px', minWidth: '200px'}" [minY]="500"
-          [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
+<p-dialog header=" "
+          [(visible)]="cartDialogShow" [modal]="true" [responsive]="true" [style]="{width: '700px', minWidth: '200px'}" [minY]="500" [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
   <div style="width: 100%;height: 500px;">
-    <div class="ui-g ui-fluid">
-      <div class="ui-g-12 ui-md-12">
-        <button pButton type="button" label="კალათის გასუფთავება" class="ui-button-danger" iconPos="left" icon="pi pi-check" style="width: 200px"></button>
-        <hr>
-        <p-table >
-          <ng-template pTemplate="header">
-            <tr>
-              <th>დასახელება</th>
-              <th>შტრიხკოდი</th>
-              <th>რაოდენობა</th>
-              <th>რაოდენობა</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-car>
-            <tr>
-              <td>{{car.vin}}</td>
-              <td>{{car.year}}</td>
-              <td>{{car.brand}}</td>
-              <td>{{car.color}}</td>
-            </tr>
-          </ng-template>
-        </p-table>
-      </div>
-    </div>
+    <app-cart [data]="cartItemsData" (removeCartItem)="removeCartItem()" ></app-cart>
   </div>
-  <p-footer>
-    <button type="button" pButton icon="pi pi-check" (click)="cartDialogShow=false" label="ზედდებულის გენერაცია"></button>
-    <button type="button" pButton icon="pi pi-close" (click)="cartDialogShow=false" label="დახურვა" class="ui-button-secondary"></button>
-  </p-footer>
 </p-dialog>
 
 <p-dialog header="ინვენტარის მოძრაობა შენობებს შორის" [(visible)]="inventoryToBuildingDialogShow" [modal]="true" [responsive]="true" [style]="{width: '700px', minWidth: '200px'}" [minY]="500"
           [maximizable]="true" [draggable]="true" [baseZIndex]="10000">
-  <div style="width: 100%;height: 500px;">
-
+  <div style="width: 100%;height: 500px;" *ngIf="inventorTransfer.generator">
+    <app-generator [transferToSection]="inventorTransfer" ></app-generator>
+  </div>
+  <div style="width: 100%;height: 500px;" *ngIf="!inventorTransfer.generator">
     <p-tabView (onChange)="onTabChange($event)" >
-      <p-tabPanel header="შენობა" [selected]="true">
+      <p-tabPanel header="შენობა" [selected]="true" >
         <div class="ui-g ui-fluid" >
           <div class="ui-g-12 ui-md-4">
             <p>თარიღი</p>
-            <p-calendar [(ngModel)]="date" [showIcon]="true"></p-calendar>
+            <p-calendar [(ngModel)]="inventorTransfer.date" [showIcon]="true" [ngClass]="{ 'red':if_error(formErrors,'date')?'1px solid red': '' }"></p-calendar>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>ფროფერთი</p>
-            <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                            [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-              <ng-template let-brand pTemplate="item">
-                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                  <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-                </div>
-              </ng-template>
+            <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedProperty"
+                            [minLength]="1" placeholder=""  field="name" [dropdown]="true" [ngClass]="{ 'red':if_error(formErrors,'selectedProperty')?'1px solid red': '' }">
+
             </p-autoComplete>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>მომთხოვნი პიროვნება</p>
-            <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                            [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-              <ng-template let-brand pTemplate="item">
-                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                  <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-                </div>
-              </ng-template>
+            <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedPerson"
+                            [minLength]="1" placeholder=""  field="name" [dropdown]="true"  [ngClass]="{ 'red':if_error(formErrors,'selectedPerson')?'1px solid red': '' }">
+
             </p-autoComplete>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>ტრანსპორტ. პასხ. პირი:</p>
-            <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                            [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-              <ng-template let-brand pTemplate="item">
-                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                  <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-                </div>
-              </ng-template>
+            <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedCarrier"
+                            [minLength]="1" placeholder=""  field="name" [dropdown]="true" [ngClass]="{ 'red':if_error(formErrors,'selectedCarrier')?'1px solid red': '' }" >
+
             </p-autoComplete>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>კომენტარი</p>
-            <textarea pInputTextarea placeholder="შენიშვნა"></textarea>
+            <textarea pInputTextarea placeholder="შენიშვნა" [(ngModel)]="inventorTransfer.note" [ngClass]="{ 'red':if_error(formErrors,'note')?'1px solid red': '' }"></textarea>
           </div>
-          <div class="ui-g-12 ui-md-12">
-            <button pButton type="button" label="კალათის გასუფთავება" class="ui-button-danger" iconPos="left" icon="pi pi-check" style="width: 200px"></button>
-            <hr>
-            <p-table >
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>დასახელება</th>
-                  <th>შტრიხკოდი</th>
-                  <th>რაოდენობა</th>
-                  <th>რაოდენობა</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-car>
-                <tr>
-                  <td>{{car.vin}}</td>
-                  <td>{{car.year}}</td>
-                  <td>{{car.brand}}</td>
-                  <td>{{car.color}}</td>
-                </tr>
-              </ng-template>
-            </p-table>
-          </div>
+          <app-cart [data]="cartItemsData"></app-cart>
         </div>
       </p-tabPanel>
       <p-tabPanel header="პიროვნება" >
         <div class="ui-g ui-fluid" >
           <div class="ui-g-12 ui-md-4">
             <p>თარიღი</p>
-            <p-calendar [(ngModel)]="date" [showIcon]="true"></p-calendar>
+            <p-calendar [(ngModel)]="inventorTransfer.date" [showIcon]="true" [ngClass]="{ 'red':if_error(formErrors,'date')?'1px solid red': '' }"></p-calendar>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>პიროვნება</p>
-            <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                            [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-              <ng-template let-brand pTemplate="item">
-                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                  <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-                </div>
-              </ng-template>
+            <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedProperty"
+                            (onSelect)="selectPerson($event)" [minLength]="1" placeholder=""  field="name" [dropdown]="true" [ngClass]="{ 'red':if_error(formErrors,'selectedProperty')?'1px solid red': '' }">
             </p-autoComplete>
           </div>
-
+          <div class="ui-g-12 ui-md-11">
+            <p>სექცია</p>
+            <p-dropdown [disabled]="!inventorTransfer.toWhomSection" [options]="stockList" optionLabel="name" placeholder="აირჩიეთ სექცია" [(ngModel)]="inventorTransfer.selectedSection" [ngClass]="{ 'red':if_error(formErrors,'selectedSection')?'1px solid red': '' }" ></p-dropdown>
+          </div>
           <div class="ui-g-12 ui-md-12">
             <p>მომთხოვნი პიროვნება</p>
-            <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                            [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-              <ng-template let-brand pTemplate="item">
-                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                  <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-                </div>
-              </ng-template>
+            <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedPerson"
+                            [minLength]="1" placeholder=""  field="name" [dropdown]="true" [ngClass]="{ 'red':if_error(formErrors,'selectedPerson')?'1px solid red': '' }">
+
             </p-autoComplete>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>ტრანსპორტ. პასხ. პირი:</p>
-            <p-autoComplete [suggestions]="filteredBrands" (completeMethod)="filterBrands($event)" [size]="30"
-                            [minLength]="1" placeholder="Hint: type 'v' or 'f'" [dropdown]="true">
-              <ng-template let-brand pTemplate="item">
-                <div class="ui-helper-clearfix" style="border-bottom:1px solid #D5D5D5">
-                  <div style="font-size:18px;float:right;margin:10px 10px 0 0">{{brand}}</div>
-                </div>
-              </ng-template>
+            <p-autoComplete [suggestions]="staffList" (completeMethod)="filterStaff($event)" [size]="30" [(ngModel)]="inventorTransfer.selectedCarrier"
+                            [minLength]="1" placeholder=""  field="name" [dropdown]="true" [ngClass]="{ 'red':if_error(formErrors,'selectedCarrier')?'1px solid red': '' }">
+
             </p-autoComplete>
           </div>
 
           <div class="ui-g-12 ui-md-12">
             <p>კომენტარი</p>
-            <textarea pInputTextarea placeholder="შენიშვნა"></textarea>
+            <textarea pInputTextarea placeholder="შენიშვნა" [(ngModel)]="inventorTransfer.note"></textarea>
           </div>
-          <div class="ui-g-12 ui-md-12">
-            <button pButton type="button" label="კალათის გასუფთავება" class="ui-button-danger" iconPos="left" icon="pi pi-check" style="width: 200px"></button>
-            <hr>
-            <p-table >
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>დასახელება</th>
-                  <th>შტრიხკოდი</th>
-                  <th>რაოდენობა</th>
-                  <th>რაოდენობა</th>
-                </tr>
-              </ng-template>
-              <ng-template pTemplate="body" let-car>
-                <tr>
-                  <td>{{car.vin}}</td>
-                  <td>{{car.year}}</td>
-                  <td>{{car.brand}}</td>
-                  <td>{{car.color}}</td>
-                </tr>
-              </ng-template>
-            </p-table>
-          </div>
+          <app-cart [data]="cartItemsData"></app-cart>
         </div>
       </p-tabPanel>
     </p-tabView>
 
   </div>
   <p-footer>
-    <button type="button" pButton icon="pi pi-check" (click)="inventoryToBuildingDialogShow=false" label="ზედდებულის გენერაცია"></button>
+    <button type="button" pButton icon="pi pi-check"  *ngIf="!inventorTransfer.generator" (click)="generaTeInventorTransfer()" label="ზედდებულის გენერაცია"></button>
+    <button type="button" pButton icon="pi pi-check"  *ngIf="inventorTransfer.generator"  (click)="activeInventorTransfer()" label="ზედდებულის გააქტიურება"></button>
     <button type="button" pButton icon="pi pi-close" (click)="inventoryToBuildingDialogShow=false" label="დახურვა" class="ui-button-secondary"></button>
   </p-footer>
 </p-dialog>
