--- a/src/app/views/management/property/property.component.scss
+++ b/src/app/views/management/property/property.component.scss
@@ -13,12 +13,28 @@
      overflow: hidden;
    }
 
-   button {
+   ag-grid-angular div[role="row"] div:nth-child(2) {
+     cursor: pointer;
+   }
+
+   button, p-tabmenu ul li a {
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
-     font-family: 'lbet-mt',sans-serif;
+     font-family: 'lbet-mt',sans-serif !important;
+     font-size: 13px !important;
    }
+
+   div[role="dialog"] {
+     .ui-dialog-title {
+       font-family: 'lbet-mt',sans-serif !important;
+     }
+     p {
+       font-family: 'lbet-st',sans-serif !important;
+     }
+     ul[role="tablist"] li a {font-family: 'lbet-mt',sans-serif !important;}
+   }
+
 
    input{
      &.red{
@@ -32,6 +48,14 @@
      .ui-dropdown{
        border:1px solid red;
      }
+   }
+
+   .ag-red{
+     background: rgba(255, 0, 0, 0.4196078431372549) !important;
+   }
+
+   .cursor{
+     cursor: pointer;
    }
 }
 
