--- a/src/app/components/cart-button/cart-button.component.css
+++ b/src/app/components/cart-button/cart-button.component.css
@@ -1,9 +1,9 @@
 /* Error: expected selector.
  *   ,
- * 1 | /deep/ app-cart{
+ * 1 | /deep/ app-cart-button{
  *   | ^
  *   '
- *   cart.component.scss 1:1  root stylesheet */
+ *   cart-button.component.scss 1:1  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-cart{\a   \2502  ^\a   \2575 \a   cart.component.scss 1:1  root stylesheet";
+  content: "Error: expected selector.\a   \2577 \a 1 \2502  /deep/ app-cart-button{\a   \2502  ^\a   \2575 \a   cart-button.component.scss 1:1  root stylesheet";
 }
