--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,1 +1,8 @@
 // Here you can add other styles
+
+  .nav a {
+    font-family: 'lbet-mt',sans-serif !important;
+  }
+.app-header button:nth-child(5)  {display: none !important;}
+
+
